# OpenGL_Reversi

./: .gitignore  CMakeLists.txt
src/: Agent.h  Board.cpp  Board.h  ComputerAgent.cpp  ComputerAgent.h  PlayerAgent.cpp  PlayerAgent.h  Renderer.cpp  Renderer.h  Reversi.cpp  Reversi.h  Reversi_env.cpp  Reversi_env.h  Shader.h  main.cpp
src/shaders/: fragment_basic.glsl  vertex_basic.glsl
